# QtAppTest

./: CMakeLists.txt  README.md  Test.txt  main.cpp
